<!--
  ~ This program is the client app for Team Unununium's VR Robot Explorer found at <https://github.com/team-unununium>
  ~ Copyright (C) 2020 Team Unununium
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/> .
  -->

<resources>
    <string name="about">About</string>
    <string name="blank" />
    <string name="done">Done</string>
    <string name="disconnected">Disconnected</string>
    <string name="humidity">Humidity</string>
    <string name="moving">Moving</string>
    <string name="obstacle">Obstacles</string>
    <string name="others">Others</string>
    <string name="screenshot">Screenshot</string>
    <string name="settings">Settings</string>
    <string name="temperature">Temperature</string>

    <string name="default_temp">0.0 &#x00B0;C</string>
    <string name="default_humidity">0.0 %</string>
    <string name="default_front_obstacle">Front: No obstacles</string>
    <string name="default_back_obstacle">Back: No obstacles</string>
    <string name="default_server_status">Server: Disconnected</string>
    <string name="default_mode_status">Mode: Observer</string>
    <string name="default_camera_night_mode">Camera night mode: Off</string>
    <string name="default_external_controller">External controller: Disconnected</string>
    <string name="default_phone_mode">Phone controls: Disabled</string>
    <string name="default_num">0.00000</string>

    <string name="error_bluetooth_permission_denied">The app would not be able to connect to the controller without Bluetooth.</string>
    <string name="error_location_permission_denied">The location permission for the app has been denied. The app would not be able to connect to the controller without Bluetooth, which indirectly requires the location permission.</string>
    <string name="error_storage_permission_denied">The storage permission for the app has been denied. The app would not be able to store the screenshots in a public directory.</string>

    <string name="intro_slide_1_title">Welcome!</string>
    <string name="intro_slide_1_desc">This app is a client for Team Unununium\'s VR Robot.</string>
    <string name="intro_slide_2_title">Bluetooth Permission</string>
    <string name="intro_slide_2_desc">Please allow the app to access Bluetooth to allow it to connect to the watch.</string>
    <string name="intro_slide_3_title">Location Permission</string>
    <string name="intro_slide_3_desc">Although this app does not track your location, it is required to allow it to scan for nearby bluetooth devices.</string>
    <string name="intro_slide_4_title">Storage Permission</string>
    <string name="intro_slide_4_desc">Please allow the app to access your local storage to allow in-app screenshots to be stored on your device.</string>

    <string name="activity_back_exit">Press back again to exit</string>
    <string name="last_camera_rotation">Last camera rotation:</string>
    <string name="last_robot_rotation">Last robot rotation:</string>

    <string name="pref_controller_mode">Controller Mode</string>
    <string name="pref_category_controller">Controller</string>
    <string name="pref_enable_external_controller">Enable external controller</string>
    <string name="pref_control_with_phone">Control with phone</string>
    <string name="pref_start_moving">Start moving</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_category_ui">UI</string>
    <string name="pref_toggle_ui_visibility">Toggle UI visibility</string>
    <string name="pref_invert_ui_colour">Invert UI colour</string>
    <string name="pref_display_icons">Display icons instead of text</string>
    <string name="pref_lower_temp_bound">Lower temperature bound (&#x00B0;C)</string>
    <string name="pref_upper_temp_bound">Upper temperature bound (&#x00B0;C)</string>
    <string name="pref_lower_humidity_bound">Lower humidity bound (%)</string>
    <string name="pref_upper_humidity_bound">Upper humidity bound (%)</string>
    <string name="pref_front_obstacle_warning">Front distance warning (mm)</string>
    <string name="pref_rear_obstacle_warning">Rear distance warning (mm)</string>
    <string name="pref_category_gas">Gas</string>
    <string name="pref_co_level">CO warning level</string>
    <string name="pref_ch4_level">CH₄ warning level</string>
    <string name="pref_h2_level">H₂ warning level</string>
    <string name="pref_lpg_level">LPG warning level</string>
    <string name="pref_about">About app</string>
    <string name="pref_diagnostics">Diagnostics mode</string>

    <string-array name="pref_three">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_phone_control">
        <item>Disabled</item>
        <item>Camera Rotation</item>
        <item>Robot Rotation</item>
    </string-array>

    <!-- States -->
    <string name="state_disconnected">Disconnected</string>
    <string name="state_acquiring_token">Acquiring access token</string>
    <string name="state_starting_socket">Connecting to Socket.IO server</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnecting">Disconnecting</string>
    <string name="state_socket_disconnected">Socket disconnected</string>
    <string name="state_network_not_available">Network not available</string>

    <!-- Errors -->
    <string name="revert_from_operator">Reverting to non-operator status…</string>
    <string name="error_network">Network error</string>
    <string name="error_h264_not_supported">H264 codec is not supported on this device</string>
    <string name="_1">1</string>
    <string name="velocity_stopped">Velocity: Stopped</string>
    <string name="fps">FPS:</string>
</resources>