<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This program is the client app for Team Unununium's VR Robot Explorer found at <https://github.com/team-unununium>
  ~ Copyright (C) 2020 Team Unununium
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/> .
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragment.NormalOverlayFragment">

    <ImageView
        android:id="@+id/overlay_text_disconnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/state_disconnected"
        android:src="@drawable/ic_cloud_off_50_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/overlay_text_moving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/moving"
        android:src="@drawable/ic_car_50_day"
        app:layout_constraintStart_toEndOf="@+id/overlay_text_disconnected"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/overlay_text_screenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/screenshot"
        android:src="@drawable/ic_camera_50_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/overlay_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_settings_50_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/overlay_text_start_moving"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="@string/blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overlay_text_screenshot" />

    <TextView
        android:id="@+id/overlay_temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/default_temp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/overlay_text_start_moving"
        app:layout_constraintTop_toTopOf="@+id/overlay_text_start_moving" />

    <TextView
        android:id="@+id/overlay_humidity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/default_humidity"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/overlay_text_start_moving"
        app:layout_constraintTop_toTopOf="@+id/overlay_text_start_moving" />

    <TextView
        android:id="@+id/overlay_front_obstacle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/default_front_obstacle"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/overlay_text_start_moving"
        app:layout_constraintTop_toBottomOf="@+id/overlay_temp_text" />

    <TextView
        android:id="@+id/overlay_back_obstacle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/default_back_obstacle"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/overlay_text_start_moving"
        app:layout_constraintTop_toBottomOf="@+id/overlay_temp_text" />

    <TextView
        android:id="@+id/overlay_gas_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/blank"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>